src/objects/Dettaglio_Wishlist__c.object
<CustomObject>
    <fields>
        <fullName>Annullato__c</fullName>
        <formula>IF(ISBLANK(Data_rimozione__c),false,true)</formula>
        <label>Annullato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Wishlists1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_inserimento__c</fullName>
        <label>Data inserimento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_rimozione__c</fullName>
        <label>Data rimozione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <label>Id Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <label>ItemId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prodotto</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipName>Dettagli_Wishlist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantita__c</fullName>
        <label>Quantità</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wishlist__c</fullName>
        <label>Wishlist</label>
        <referenceTo>Wishlist__c</referenceTo>
        <relationshipLabel>Dettagli Wishlist</relationshipLabel>
        <relationshipName>Dettagli_Wishlist</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dettaglio Wishlist</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Dettaglio Wishlist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dettagli Wishlist</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>